fix viewport on mobile

--- a/assets/typography.css
+++ b/assets/typography.css
@@ -50,27 +50,41 @@ footer
         display: none;
         width: 85vw;
     }
-    #sidebar h1 {
-        font-size: 5vh;
-    }
     #tab-content {
         width: 94vw;
         margin-top: 60px;
         margin-left: 0;
     }
-    .custom-tab, .custom-tab-sub, .custom-tab-disabled {
-        font-size: 1.3em;
+    .custom-div-smaller, .custom-div-small, .custom-div-small-medium,
+    .custom-div-half, .custom-div-medium, .custom-div-large, .custom-div-large-full,
+    .custom-div-instruction, .custom-div-full {
+        width: -webkit-fill-available !important;
     }
     .card {
-        height: 10vh;
-        width: 20vw;
+        height: 30vh;
+        width: 40%;
+    }
+    .zoom:hover {
+        transform: scale(1.1);
+    }
+    [id^="button-wnrs"], [id^="uploadbutton-"], .button-wnrs {
+        padding: 0px 10px;
+        margin-right: 5px;
+        font-size: 60%;
+    }
+    .span-short {
+        margin-left: 20px;
+        width: 160px;
+    }
+    Img[id$="-help"], .blinker {
+        display: none !important;
     }
     #div-wnrs {
         height: 60vw;
         width: 90vw;
     }
-    #wnrs-prompt, #wnrs-reminder-text, #wnrs-reminder {
-        font-size: 2em;
+    #wnrs-counter {
+        font-size: 0.8em;
     }
     #button-wnrs-back, #button-wnrs-next {
         width: 20vw;
@@ -86,27 +100,39 @@ footer
         display: inline-block;
         width: 16vw;
     }
-    #sidebar h1 {
-        font-size: 45px;
-    }
     #tab-content {
         width: 80vw;
         margin-top: 0;
         margin-left: 16vw;
     }
     .custom-tab, .custom-tab-sub, .custom-tab-disabled {
-        font-size: 13px;
+        font-size: 80%;
     }
     .card {
         height: 30vh;
         width: 15vw;
     }
+    .zoom:hover {
+        transform: scale(1.2);
+    }
+    [id^="button-wnrs"], [id^="uploadbutton-"], .button-wnrs {
+        padding: 0px 30px;
+        margin-right: 10px;
+        font-size: 80%;
+    }
+    .span-short {
+        margin-left: 50px;
+        width: 200px;
+    }
+    .blinker {
+        display: inline-block;
+    }
     #div-wnrs {
         height: 53vh;
         width: 80vh;
     }
-    #wnrs-prompt, #wnrs-reminder-text, #wnrs-reminder {
-        font-size: 1.3em;
+    #wnrs-counter {
+        font-size: 1em;
     }
     #button-wnrs-back, #button-wnrs-next {
         width: 10vw;
@@ -130,10 +156,6 @@ footer
     text-decoration: underline;
 }
 
-.zoom:hover {
-    transform: scale(1.2);
-}
-
 
 /* Button (Customized)
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -146,7 +168,7 @@ footer
     color: white;
 }
 
-[id$="-ok"] {
+[id$="-ok"], [id^="uploadbutton-"] {
     background-color: #F0E3DF;
     box-shadow: 1px 1px 2px #BE9B89;
     margin-bottom: 10px;
@@ -258,8 +280,10 @@ footer
     top: 50%;
     transform: translateY(-50%);
     pointer-events: none;
-    font-size: 150%;
+    font-family: sans-serif;
+    font-size: 120%;
     font-weight: bold;
+    text-transform: uppercase;
     text-shadow: 0px 0px 10px #FFF;
 }
 
@@ -367,7 +391,7 @@ footer
 }
 
 .custom-div-large-full {
-    width: 62%;
+    width: 80%;
 }
 
 .custom-div-instruction {
@@ -389,13 +413,8 @@ footer
     font-weight: bold;
 }
 
-.span-short {
-    margin-left: 50px;
-    width: 200px;
-}
-
 .blinker {
-    display: inline-block;
+    margin-left: 5px;
     color: red;
     font-weight: bold;
     text-transform: uppercase;
@@ -483,7 +502,7 @@ footer
 
 #tab-content {
     display: inline-block;
-    padding-left: 1.5vw;
+    padding-left: 1vw;
     padding-right: 1.5vw;
     padding-bottom: 20px;
 }
@@ -491,6 +510,11 @@ footer
 #violin-plot .js-plotly-plot .plotly .cursor-pointer,
 #graph-mbti .js-plotly-plot .plotly .cursor-pointer {
     cursor: auto;
+}
+
+#violin-plot {
+    margin-top: 10vh;
+    height: 60vh;
 }
 
 [id^="upload-"] {
@@ -505,16 +529,11 @@ footer
 }
 
 [id^="uploadbutton-"] {
-    background-color: #F0E3DF;
-    box-shadow: 1px 1px 2px #be9b89;
     border-radius: 15px;
     color: #202029;
     display: inline-block;
     line-height: 28px;
-    padding: 0px 30px;
-    margin-right: 10px;
     text-transform: uppercase;
-    font-size: 11px;
     font-weight: 600;
     letter-spacing: .1rem;
 }
@@ -556,6 +575,7 @@ footer
 #wnrs-prompt p, #wnrs-reminder-text p, #wnrs-reminder p {
     font-family: sans-serif;
     font-weight: bold;
+    font-size: 1.3em;
     margin: 0;
 }
 
@@ -596,7 +616,7 @@ footer
     right: 0;
     font-family: sans-serif;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 0.8em;
     line-height: 95%;
     text-shadow: 0 0 black;
 }
